# FileXplore

./: README.md
FileXplore/: .gitignore  CMakeLists.txt  Makefile  README-GUI.md  README.md  TEAM_DIVISION.md  build_log.txt  demo_commands.txt  main.cpp  test_commands.txt
FileXplore/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
FileXplore/build-mgw/: CMakeCache.txt  Makefile  cmake_install.cmake
FileXplore/filexplore_root/: hello.txt
FileXplore/filexplore_root/abc/hello1/: abc.txt
FileXplore/include/: CommandParser.h  CompressionManager.h  DirManager.h  FileManager.h  HistoryManager.h  PathUtils.h  PersistenceManager.h  SystemInfo.h  WebServer.h
FileXplore/src/: CommandParser.cpp  CompressionManager.cpp  DirManager.cpp  FileManager.cpp  HistoryManager.cpp  PathUtils.cpp  PersistenceManager.cpp  SystemInfo.cpp  WebServer.cpp
FileXplore/web/: app.js  index.html  styles.css  test-server.py
